plugins {
    id 'java'
    id 'application'
    id 'java-library'
}


wrapper {
    gradleVersion = '8.10.2'
}

group 'roppy.dq10.rankanalytics.scraper'
version '1.0.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

application {
    mainClass = 'roppy.dq10.rankanalytics.scraper.RankScraperMain'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation platform('software.amazon.awssdk:bom:2.46.0')

    implementation 'com.amazonaws:aws-lambda-java-core:1.4.0'
    implementation 'software.amazon.awssdk:s3'
    implementation 'org.jsoup:jsoup:1.12.1'
    testImplementation group: 'junit', name: 'junit', version: '4.12'
    compileOnly 'org.projectlombok:lombok:1.18.34'
    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.34'
}

jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    manifest {
        attributes('Main-Class': application.mainClass.get())
    }
    from configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
}